[[bin]]
name = "mitosisctl"

[package]
name = "mitosisctl"
version = "0.0.1"
edition = "2021"
authors = ["sched_ext contributors"]
description = "CLI helper for scx_mitosis maps"
license = "GPL-2.0-only"
build = "build.rs"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
anyhow = "1.0.65"
libbpf-rs = "=0.25.0"
scx_utils = { path = "../../../../rust/scx_utils", version = "1.0.17" }

[build-dependencies]
scx_utils = { path = "../../../../rust/scx_utils", version = "1.0.17" }
